[tool.poetry]
name = "echo-messaging-api"
version = "0.1.0"
description = ""
authors = ["appealior <be2love4u@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.71.0"
uvicorn = "^0.16.0"
requests = "^2.27.1"
pydantic = "^1.9.0"
pytest = "^6.2.5"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
